2021-07-03  Joel Brobecker  <brobecker@adacore.com>

	* gdb.base/default.exp: Change $_gdb_major to 12.

2021-07-01  Pedro Alves  <pedro@palves.net>

	PR mi/15729
	PR gdb/13463
	* gdb.base/access-mem-running.c: New.
	* gdb.base/access-mem-running.exp: New.
	* gdb.threads/access-mem-running-thread-exit.c: New.
	* gdb.threads/access-mem-running-thread-exit.exp: New.

2021-06-29  Simon Marchi  <simon.marchi@polymtl.ca>

	* gdb.dwarf2/dw2-reg-undefined.exp: Update regexp.

2021-06-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.base/info_sources_2-header.h: New file.
	* gdb.base/info_sources_2-lib.c: New file.
	* gdb.base/info_sources_2-test.c: New file.
	* gdb.base/info_sources_2.exp: New file.

2021-06-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.mi/mi-info-sources.exp: Add additional tests.

2021-06-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.dwarf2/dw2-filename.exp: Update expected results.
	* gdb.mi/mi-file.exp: Likewise.
	* gdb.mi/mi-info-sources-base.c: New file.
	* gdb.mi/mi-info-sources.c: New file.
	* gdb.mi/mi-info-sources.exp: New file.

2021-06-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* gdb.cp/method-call-in-c.cc (struct foo_type): Add static member
	function static_method.
	(global_var): New global.
	(main): Use new static_method to ensure it is compiled in.
	* gdb.cp/method-call-in-c.exp: Test calls to static member
	function.

2021-06-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	PR gdb/27994
	* gdb.cp/method-call-in-c.cc (struct foo_type): Add operator+=,
	change initial value of var member variable.
	(main): Make use of foo_type's operator+=.
	* gdb.cp/method-call-in-c.exp: Test use of operator+=.

2021-06-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	PR gdb/27994
	* gdb.cp/method-call-in-c.cc: New file.
	* gdb.cp/method-call-in-c.exp: New file.

2021-06-25  Tom Tromey  <tom@tromey.com>

	* lib/gdb.exp (add_gdb_index, ensure_gdb_index): Add "style"
	parameter.